Quorum3/Library/Tests/Expressions/Fail/RedLine2.quorum
use Libraries.Containers.Array
use Libraries.Language.Errors.Error
use Libraries.System.File
use Libraries.

class Main
//    File file
//    Array<integer> array
    action Main
        output "1"
        output "1"
        output "1"
        output "1"
        output "1"
    end

    action dumbass
        output "2"
    end

    action dumberass
        output "3"
    end

    action dumbestass
        output "4"
    end
    
    action fuckthisshit
        output "5"
    end
end